TE5-T375 Android_UI_Exercise_Completed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Android_Demo_Kotlin">
         <activity
+            android:name=".UiElementActivity"
+            android:exported="false" />
+        <activity
             android:name=".Kotlin_Basic"
             android:exported="false" />
         <activity
