--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,14 +43,13 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    //implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.5.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //Material Design
     //View Pager
     implementation "androidx.viewpager2:viewpager2:1.0.0"
-
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     //noinspection GradleCompatible
     implementation 'com.android.support:design:25.0.0'
