--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Android_Demo_Kotlin">
         <activity
+            android:name=".LayoutExampleActivity"
+            android:exported="false" />
+        <activity
             android:name=".PendingActivity"
             android:exported="false"
             android:label="@string/title_activity_pending"
@@ -17,7 +20,7 @@
         <activity
             android:name=".NavgraphActivity"
             android:exported="false"
-            android:label="@string/lbl_navgraph_activity"/>
+            android:label="@string/lbl_navgraph_activity" />
         <activity
             android:name=".FragmentActivity"
             android:exported="false"
@@ -104,14 +107,18 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="image/*" />
+
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name="MyReceiver" >
-        </receiver>
+
+        <receiver android:name=".MyReceiver"></receiver>
     </application>
 
 </manifest>
