--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.android_demo_kotlin">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,6 +11,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Android_Demo_Kotlin">
+        <activity
+            android:name=".WebServices.CreateUserActivity"
+            android:exported="false" />
+        <activity
+            android:name=".WebServices.SingleUserActivity"
+            android:exported="false" />
+        <activity
+            android:name=".WebServices.RecyclerWebActivity"
+            android:exported="false" />
+        <activity
+            android:name=".WebServices.LoginActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Android_Demo_Kotlin.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".WebviewActivity"
             android:exported="false" />
@@ -116,14 +136,10 @@
                 <category android:name="android.intent.category.DEFAULT" />
 
                 <data android:mimeType="image/*" />
-
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <receiver android:name=".MyReceiver"></receiver>
+        <receiver android:name=".MyReceiver" />
     </application>
 
 </manifest>
