--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,6 @@ dependencies {
     //OkHttp
     implementation 'com.localebro:okhttpprofiler:1.0.8'
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.18'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 }
