--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     //OkHttp
     implementation 'com.localebro:okhttpprofiler:1.0.8'
-
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.18'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
 }
