--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,7 @@ dependencies {
     implementation 'com.localebro:okhttpprofiler:1.0.8'
 
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 }
