--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,9 +65,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     //OkHttp
     implementation 'com.localebro:okhttpprofiler:1.0.8'
-
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
-
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 }
