--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Android_Demo_Kotlin">
         <activity
+            android:name=".CoordinatorLayoutActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Android_Demo_Kotlin.NoActionBar"/>
+        <activity
+            android:name=".NavigationViewActivity"
+            android:exported="false" />
+        <activity
             android:name=".PermissionActivity"
             android:exported="false" />
         <activity
